--- a/app/src/main/res/layout/layout_eclipse_center.xml
+++ b/app/src/main/res/layout/layout_eclipse_center.xml
@@ -41,7 +41,6 @@
                     android:layout_marginTop="8dp"
                     android:fontFamily="sans-serif-condensed"
                     app:eclipseCenterText="@{@string/eclipse_type}"
-                    android:textColor="@android:color/white"
                     android:textSize="@dimen/default_text_size"
                     android:maxLines="2"
                     android:layout_weight="1"/>
@@ -54,7 +53,6 @@
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="8dp"
                     android:fontFamily="sans-serif-condensed"
-                    android:textColor="@android:color/white"
                     android:textSize="@dimen/default_text_size"
                     android:gravity="end"
                     android:maxLines="2"
@@ -76,7 +74,6 @@
                     android:layout_marginTop="8dp"
                     android:fontFamily="sans-serif-condensed"
                     app:eclipseCenterText="@{@string/date}"
-                    android:textColor="@android:color/white"
                     android:textSize="@dimen/default_text_size"
                     android:maxLines="2"
                     android:layout_weight="1"/>
@@ -89,7 +86,6 @@
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="8dp"
                     android:fontFamily="sans-serif-condensed"
-                    android:textColor="@android:color/white"
                     android:textSize="@dimen/default_text_size"
                     android:gravity="end"
                     android:maxLines="2"
@@ -111,7 +107,6 @@
                     android:layout_marginTop="8dp"
                     android:fontFamily="sans-serif-condensed"
                     app:eclipseCenterText="@{@string/location_latitude}"
-                    android:textColor="@android:color/white"
                     android:textSize="@dimen/default_text_size"
                     android:maxLines="2"
                     android:layout_weight="1"/>
@@ -124,7 +119,6 @@
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="8dp"
                     android:fontFamily="sans-serif-condensed"
-                    android:textColor="@android:color/white"
                     android:textSize="@dimen/default_text_size"
                     android:gravity="end"
                     android:maxLines="2"
@@ -146,7 +140,6 @@
                     android:layout_marginTop="8dp"
                     android:fontFamily="sans-serif-condensed"
                     app:eclipseCenterText="@{@string/location_longitude}"
-                    android:textColor="@android:color/white"
                     android:textSize="@dimen/default_text_size"
                     android:maxLines="2"
                     android:layout_weight="1" />
@@ -159,7 +152,6 @@
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="8dp"
                     android:fontFamily="sans-serif-condensed"
-                    android:textColor="@android:color/white"
                     android:textSize="@dimen/default_text_size"
                     android:gravity="end"
                     android:maxLines="2"
@@ -181,7 +173,6 @@
                     android:layout_marginTop="8dp"
                     android:fontFamily="sans-serif-condensed"
                     app:eclipseCenterText="@{@string/percent_eclipse}"
-                    android:textColor="@android:color/white"
                     android:textSize="@dimen/default_text_size"
                     android:maxLines="2"
                     android:layout_weight="1"/>
@@ -194,7 +185,6 @@
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="8dp"
                     android:fontFamily="sans-serif-condensed"
-                    android:textColor="@android:color/white"
                     android:textSize="@dimen/default_text_size"
                     android:layout_weight="1"
                     android:maxLines="2"
@@ -218,7 +208,6 @@
                     android:layout_marginTop="8dp"
                     android:fontFamily="sans-serif-condensed"
                     app:eclipseCenterText="@{@string/totality_duration}"
-                    android:textColor="@android:color/white"
                     android:textSize="@dimen/default_text_size"
                     android:maxLines="2"
                     android:layout_weight="1"/>
@@ -231,7 +220,6 @@
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="8dp"
                     android:fontFamily="sans-serif-condensed"
-                    android:textColor="@android:color/white"
                     android:textSize="@dimen/default_text_size"
                     android:layout_weight="1"
                     android:gravity="end"
@@ -246,7 +234,7 @@
                 android:layout_marginBottom="16dp"
                 android:paddingTop="8dp"
                 android:paddingBottom="8dp"
-                android:background="@color/colorAccent"
+                android:background="@color/colorPrimary"
                 android:gravity="center"
                 android:orientation="horizontal"
                 android:contentDescription="@string/event_section_desc"
@@ -259,7 +247,7 @@
                     android:fontFamily="sans-serif-condensed"
                     android:gravity="center_horizontal"
                     android:text="@string/eclipse_event"
-                    android:textColor="@color/text_color_primary"
+                    android:textColor="@android:color/black"
                     android:textSize="@dimen/default_text_size"
                     android:textStyle="bold"
                     android:importantForAccessibility="no" />
@@ -271,7 +259,7 @@
                     android:fontFamily="sans-serif-condensed"
                     android:gravity="center_horizontal"
                     android:text="@string/local_time"
-                    android:textColor="@color/text_color_primary"
+                    android:textColor="@android:color/black"
                     android:textSize="@dimen/default_text_size"
                     android:textStyle="bold"
                     android:importantForAccessibility="no" />
@@ -283,7 +271,7 @@
                     android:fontFamily="sans-serif-condensed"
                     android:gravity="center_horizontal"
                     android:text="@string/time_ut"
-                    android:textColor="@color/text_color_primary"
+                    android:textColor="@android:color/black"
                     android:textSize="@dimen/default_text_size"
                     android:textStyle="bold"
                     android:importantForAccessibility="no" />
