--- a/app/src/main/res/layout/layout_walkthrough_two.xml
+++ b/app/src/main/res/layout/layout_walkthrough_two.xml
@@ -6,7 +6,6 @@
     android:layout_height="match_parent"
     tools:context=".ui.walkthrough.WalkthroughActivity"
     android:orientation="vertical"
-    android:background="@android:color/white"
     android:focusable="true">
 
     <androidx.constraintlayout.widget.Guideline
@@ -42,8 +41,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="sans-serif-condensed"
-        android:textColor="@color/text_color_primary"
-        android:textSize="12sp"
+        android:textSize="@dimen/page_indicator_text_size"
+        android:textColor="@android:color/black"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         app:layout_constraintBottom_toBottomOf="@+id/image_header"
@@ -74,7 +73,6 @@
                 android:fontFamily="sans-serif-medium"
                 android:text="@string/rumble_map"
                 android:textSize="21sp"
-                android:textColor="@color/text_color_primary"
                 android:focusable="false"/>
 
             <TextView
@@ -89,7 +87,6 @@
                 android:fontFamily="sans-serif"
                 android:text="@string/walkthrough_rumble_map_text"
                 android:textSize="@dimen/default_text_size"
-                android:textColor="@color/text_color_primary"
                 android:focusable="false"/>
         </LinearLayout>
 
