--- a/app/src/main/res/drawable/ic_seekbar_progress.xml
+++ b/app/src/main/res/drawable/ic_seekbar_progress.xml
@@ -8,7 +8,7 @@
 
     <stroke
         android:width="@dimen/seekbar_border_width"
-        android:color="@color/colorAccent" />
+        android:color="@color/colorPrimary" />
 
     <size
         android:height="@dimen/seekbar_size"
