--- a/app/src/main/res/drawable/rounded_button.xml
+++ b/app/src/main/res/drawable/rounded_button.xml
@@ -3,7 +3,7 @@
     android:shape="rectangle" android:padding="10dp">
     <!-- you can use any color you want I used here gray color-->
     <!--<solid android:color="#a000"/>-->
-    <solid android:color="@color/colorAccent"/>
+    <solid android:color="@color/colorPrimary"/>
 
     <corners android:radius="48dp"/>
 </shape>
