--- a/app/src/main/res/layout/activity_legal_libraries.xml
+++ b/app/src/main/res/layout/activity_legal_libraries.xml
@@ -16,7 +16,6 @@
             android:fontFamily="sans-serif-medium"
             android:text="@string/libs_in_use"
             android:textSize="@dimen/title_text_size"
-            android:textColor="@color/text_color_primary"
             android:layout_marginEnd="16dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp" />
@@ -25,7 +24,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            card_view:cardElevation="5dp"
             card_view:cardUseCompatPadding="true">
 
             <TextView
@@ -35,7 +33,6 @@
                 android:fontFamily="sans-serif"
                 android:text="@string/libraries_use_detail"
                 android:textSize="@dimen/default_text_size"
-                android:textColor="@color/text_color_primary"
                 android:layout_marginEnd="16dp"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp" />
@@ -48,7 +45,6 @@
             android:fontFamily="sans-serif-medium"
             android:text="@string/jsyn_lib"
             android:textSize="@dimen/title_text_size"
-            android:textColor="@color/text_color_primary"
             android:layout_marginEnd="16dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp" />
@@ -57,17 +53,14 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginTop="8dp"
-            card_view:cardElevation="5dp"
-            card_view:cardUseCompatPadding="true">
+            card_view:cardUseCompatPadding="false">
 
             <WebView
                 android:id="@+id/jsyn_license"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="sans-serif"
-                android:textSize="@dimen/default_text_size"
-                android:textColor="@color/text_color_primary"
-                android:layout_margin="16dp"/>
+                android:textSize="@dimen/default_text_size"/>
 
         </androidx.cardview.widget.CardView>
     </LinearLayout>
