--- a/app/src/main/res/layout/activity_rumble_map_instructions.xml
+++ b/app/src/main/res/layout/activity_rumble_map_instructions.xml
@@ -5,7 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@android:color/white"
     android:focusable="true">
 
     <androidx.constraintlayout.widget.Guideline
@@ -65,7 +64,6 @@
                 android:fontFamily="sans-serif-medium"
                 android:text="@string/rumble_map_how"
                 android:textSize="@dimen/title_text_size"
-                android:textColor="@color/text_color_primary"
                 android:focusable="false"
                 app:autoSizeTextType="uniform"
                 app:autoSizeMinTextSize="16sp"
@@ -83,7 +81,6 @@
                 android:fontFamily="sans-serif"
                 android:text="@string/rumble_map_instructions"
                 android:textSize="@dimen/default_text_size"
-                android:textColor="@color/text_color_primary"
                 android:focusable="false"/>
         </LinearLayout>
 
@@ -97,10 +94,10 @@
         android:background="@android:color/transparent"
         android:contentDescription="@string/back"
         android:layout_margin="16dp"
-        android:tint="@color/colorAccent"
         app:srcCompat="@drawable/ic_chevron_left"
 
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:tint="@color/colorPrimary" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
