--- a/app/src/main/res/layout/activity_walkthrough.xml
+++ b/app/src/main/res/layout/activity_walkthrough.xml
@@ -25,7 +25,7 @@
         android:scaleType="fitCenter"
         android:background="@android:color/transparent"
         app:srcCompat="@drawable/ic_chevron_left"
-        app:tint="@color/colorAccent" />
+        app:tint="@color/colorPrimary" />
 
     <ImageButton
         android:id="@+id/next_button"
@@ -38,21 +38,20 @@
         android:contentDescription="@string/next_page"
         android:background="@android:color/transparent"
         app:srcCompat="@drawable/ic_chevron_right"
-        app:tint="@color/colorAccent" />
+        app:tint="@color/colorPrimary" />
 
     <Button
         android:id="@+id/skip_close_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/next_button"
-        android:layout_alignStart="@+id/next_button"
-        android:layout_alignParentEnd="true"
+        android:layout_alignEnd="@+id/next_button"
         android:background="@android:color/transparent"
         android:contentDescription="@string/skip"
         android:fontFamily="sans-serif-condensed"
-        android:gravity="top|center_horizontal"
+        android:gravity="end"
         android:text="@string/skip"
         android:textAllCaps="false"
-        android:textColor="@color/colorAccent" />
+        android:textColor="@color/colorPrimary" />
 
 </RelativeLayout>
