--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -1,9 +1,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#303030"
     android:orientation="vertical"
     tools:context=".ui.about.AboutFragment">
 
@@ -11,9 +9,7 @@
         android:id="@+id/toolbar"
         android:minHeight="?attr/actionBarSize"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:titleTextColor="@android:color/white"
-        android:background="?attr/colorPrimary"/>
+        android:layout_height="wrap_content"/>
 
     <androidx.core.widget.NestedScrollView
         android:id="@+id/ScrollView01"
@@ -26,7 +22,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:background="@android:color/white"
             android:layout_marginBottom="16dp">
 
             <ImageView
@@ -44,15 +39,14 @@
                 android:layout_margin="16dp"
                 android:fontFamily="sans-serif"
                 android:textSize="@dimen/default_text_size"
-                android:textColor="@color/text_color_primary"
                 android:text="@string/about_us_details" />
 
             <View
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/ma_divider_thickness_light"
+                android:layout_height="@dimen/divider_size"
+                android:background="?attr/colorControlNormal"
                 android:layout_marginStart="16dp"
-                android:layout_marginEnd="16dp"
-                android:background="#757575" />
+                android:layout_marginEnd="16dp"/>
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/about_list_view"
