--- a/app/src/main/res/layout/item_future_eclipse.xml
+++ b/app/src/main/res/layout/item_future_eclipse.xml
@@ -1,54 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<androidx.cardview.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:padding="@dimen/ma_list_item_edges_padding"
-    android:layout_marginBottom="16dp"
-    android:background="@android:color/white"
-    android:focusable="true"
-    android:focusableInTouchMode="true">
+    android:layout_marginBottom="@dimen/default_margin">
 
-    <TextView
-        android:id="@+id/date"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/ma_list_item_line_spacing"
-        android:fontFamily="sans-serif"
-        android:textColor="@color/text_color_primary"
-        android:textSize="@dimen/default_text_size"
-        tools:text="Three-line item" />
+        android:orientation="vertical"
+        android:padding="@dimen/default_margin"
+        android:layout_marginBottom="16dp"
+        android:focusable="true"
+        android:focusableInTouchMode="true">
 
-    <TextView
-        android:id="@+id/time"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/ma_list_item_line_spacing"
-        android:fontFamily="sans-serif"
-        android:textColor="@color/text_color_primary"
-        android:textSize="@dimen/default_text_size"
-        tools:text="Secondary text"/>
+        <TextView
+            android:id="@+id/date"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/list_item_line_spacing"
+            android:fontFamily="sans-serif"
+            android:textSize="@dimen/default_text_size"
+            tools:text="Three-line item" />
 
-    <TextView
-        android:id="@+id/type"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/ma_list_item_line_spacing"
-        android:fontFamily="sans-serif"
-        android:textColor="@color/text_color_primary"
-        android:textSize="@dimen/default_text_size"
-        tools:text="Tertiary text"/>
+        <TextView
+            android:id="@+id/time"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/list_item_line_spacing"
+            android:fontFamily="sans-serif"
+            android:textSize="@dimen/default_text_size"
+            tools:text="Secondary text"/>
 
+        <TextView
+            android:id="@+id/type"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/list_item_line_spacing"
+            android:fontFamily="sans-serif"
+            android:textSize="@dimen/default_text_size"
+            tools:text="Tertiary text"/>
 
-    <TextView
-        android:id="@+id/features"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:fontFamily="sans-serif"
-        android:textColor="@color/text_color_primary"
-        android:textSize="@dimen/default_text_size"
-        tools:text="Tertiary text"/>
+        <TextView
+            android:id="@+id/features"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="sans-serif"
+            android:textSize="@dimen/default_text_size"
+            tools:text="Tertiary text"/>
 
-</LinearLayout>
+    </LinearLayout>
+
+</androidx.cardview.widget.CardView>
