--- a/app/src/main/res/layout/item_media.xml
+++ b/app/src/main/res/layout/item_media.xml
@@ -38,7 +38,7 @@
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
             android:layout_marginStart="16dp"
-            android:layout_marginEnd="@dimen/ma_list_item_edges_padding"
+            android:layout_marginEnd="@dimen/default_margin"
             app:srcCompat="@drawable/ic_chevron_right"/>
 
         <TextView
@@ -50,7 +50,6 @@
             android:layout_centerInParent="true"
             android:layout_toStartOf="@+id/list_media_extra"
             android:fontFamily="sans-serif-medium"
-            android:textColor="@color/text_color_primary"
             android:textSize="@dimen/default_text_size"
             app:stringId="@{media.titleResId}"/>
     </RelativeLayout>
