--- a/app/src/main/res/layout/item_section.xml
+++ b/app/src/main/res/layout/item_section.xml
@@ -3,8 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    app:cardBackgroundColor="@color/section_bg">
+    android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/title"
@@ -13,7 +12,6 @@
         android:layout_margin="16dp"
         android:fontFamily="sans-serif-medium"
         android:textSize="18sp"
-        android:textColor="@color/text_color_primary"
         android:maxLines="1"
         tools:text="Section Title"/>
 
