--- a/app/src/main/res/layout/layout_walkthrough_five.xml
+++ b/app/src/main/res/layout/layout_walkthrough_five.xml
@@ -19,7 +19,6 @@
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
             android:fontFamily="sans-serif-medium"
-            android:textColor="@color/text_color_primary"
             android:textSize="21sp"
             android:text="@string/walkthrough_location_page"
             android:contentDescription="@string/walkthrough_title_location"
@@ -50,7 +49,6 @@
             android:gravity="center"
             android:fontFamily="sans-serif"
             android:textSize="@dimen/default_text_size"
-            android:textColor="@color/text_color_primary"
             android:layout_marginTop="16dp"
             android:layout_marginStart="24dp"
             android:layout_marginEnd="24dp"
@@ -82,7 +80,7 @@
             android:background="@android:color/transparent"
             android:layout_marginTop="4dp"
             android:padding="16dp"
-            android:textColor="@color/colorAccent"
+            android:textColor="@color/colorPrimary"
             android:text="@string/not_now"
             android:contentDescription="@string/not_now"
             android:layout_marginStart="24dp"
@@ -97,8 +95,7 @@
             android:layout_alignEnd="@+id/button_ask_later"
             android:layout_marginBottom="4dp"
             android:fontFamily="sans-serif-condensed"
-            android:textColor="@android:color/black"
-            android:textSize="12sp"
+            android:textSize="@dimen/page_indicator_text_size"
             android:textStyle="bold"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="24dp"
