--- a/app/src/main/res/layout/layout_walkthrough_one.xml
+++ b/app/src/main/res/layout/layout_walkthrough_one.xml
@@ -31,7 +31,7 @@
         android:layout_height="wrap_content"
         android:fontFamily="sans-serif-condensed"
         android:textColor="@android:color/white"
-        android:textSize="12sp"
+        android:textSize="@dimen/page_indicator_text_size"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         app:layout_constraintBottom_toBottomOf="@+id/walkthrough_img"
@@ -58,7 +58,6 @@
                 android:layout_gravity="center_horizontal"
                 android:text="@string/welcome"
                 android:fontFamily="sans-serif-medium"
-                android:textColor="@color/text_color_primary"
                 android:textSize="21sp"
                 android:focusable="false"/>
 
@@ -73,7 +72,6 @@
                 android:gravity="center"
                 android:fontFamily="sans-serif"
                 android:text="@string/walkthrough_welcome_text"
-                android:textColor="@color/text_color_primary"
                 android:textSize="@dimen/default_text_size"
                 android:focusable="false"/>
         </LinearLayout>
