--- a/app/src/main/res/layout/view_feature_description.xml
+++ b/app/src/main/res/layout/view_feature_description.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="match_parent"
-    android:layout_width="match_parent"
-    android:background="@android:color/black" >
+    android:layout_width="match_parent">
     <LinearLayout
-        android:orientation="vertical" android:layout_width="match_parent"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@android:color/black"
         android:focusable="true">
 
         <TextView
@@ -16,7 +15,6 @@
             android:layout_gravity="center"
             android:layout_margin="16dp"
             android:fontFamily="sans-serif-condensed"
-            android:textColor="@android:color/white"
             android:textSize="@dimen/default_text_size" />
     </LinearLayout>
 </ScrollView>
