--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,41 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#212121</color>
-    <color name="colorPrimaryDark">#000000</color>
-    <color name="colorAccent">#E35E05</color>
+    <color name="colorPrimary">#e35e05</color>
+    <color name="colorPrimaryVariant">#f2860d</color>
+    <color name="colorSecondary">@color/colorPrimary</color>
 
-    <!-- basic colors -->
-    <color name="blue">#2196F3</color>
-    <color name="gray">#9E9E9E</color>
-    <color name="blue_gray">#607D8B</color>
-    <color name="green">#4CAF50</color>
-    <color name="dark_green">#1B5E20</color>
-    <color name="red">#F44336</color>
-
-    <!-- MaterialDrawer DEFAULT DARK colors -->
-    <color name="material_drawer_dark_background">#303030</color>
-
-    <!-- MaterialDrawer DEFAULT DARK text / items colors -->
-    <color name="material_drawer_dark_primary_text">#DEFFFFFF</color>
-    <color name="material_drawer_dark_primary_icon">#8AFFFFFF</color>
-    <color name="material_drawer_dark_secondary_text">#8AFFFFFF</color>
-    <color name="material_drawer_dark_hint_text">#42FFFFFF</color>
-    <color name="material_drawer_dark_divider">#1FFFFFFF</color>
-
-    <!-- MaterialDrawer DEFAULT DARK drawer colors -->
-    <color name="material_drawer_dark_selected">#202020</color>
-    <color name="material_drawer_dark_header_selection_text">#FFF</color>
-
-
-    <color name="section_bg">#E0E0E0</color>
-    <color name="md_divider_light_12">#1fffffff</color>
-    <color name="divider_color">#E0E0E0</color>
-
-    <!-- text colors -->
-    <color name="ma_text_dark_primary_87">#df000000</color>
-    <color name="ma_text_dark_secondary_54">#8a000000</color>
-    <color name="text_color_primary">@color/ma_text_dark_primary_87</color>
-    <color name="text_color_secondary">@color/ma_text_dark_secondary_54</color>
+    <color name="gray">#757575</color>
 
     <color name="walkthrough_gradient_top">@android:color/white</color>
     <color name="walkthrough_gradient_bottom">#dae0e5</color>
