--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,29 +1,21 @@
 <resources>
     <dimen name="default_text_size">18sp</dimen>
+    <dimen name="secondary_text_size">16sp</dimen>
     <dimen name="title_text_size">21sp</dimen>
 
-    <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="default_margin">16dp</dimen>
     <dimen name="margin_small">8dp</dimen>
-    <dimen name="activity_horizontal_margin">16dp</dimen>
-    <dimen name="activity_vertical_margin">16dp</dimen>
-
     <dimen name="default_button_size">48dp</dimen>
 
-    <dimen name="ma_list_item_edges_padding">16dp</dimen>
-    <dimen name="ma_list_item_text_edge_padding_start">72dp</dimen>
-    <dimen name="ma_list_item_primary_text">@dimen/default_text_size</dimen>
-    <dimen name="ma_list_item_secondary_text">16sp</dimen>
-    <dimen name="ma_list_item_end_icon_padding_start">16dp</dimen>
-    <dimen name="ma_list_multi_line_item_avatar_icon_padding_top">16dp</dimen>
-    <dimen name="ma_list_item_line_spacing">4dp</dimen>
+    <dimen name="list_item_text_edge_padding_start">72dp</dimen>
+    <dimen name="list_item_line_spacing">4dp</dimen>
 
-    <dimen name="ma_divider_thickness">1dp</dimen>
-    <dimen name="ma_divider_thickness_light">0.5dp</dimen>
+    <dimen name="divider_size">0.35dp</dimen>
 
-    <dimen name="permission_dialog_width">300dp</dimen>
+    <dimen name="page_indicator_text_size">12sp</dimen>
 
     <dimen name="seekbar_size">16dp</dimen>
+    <dimen name="seekbar_size_half">8dp</dimen>
     <dimen name="seekbar_border_width">1dp</dimen>
 
 </resources>
