--- a/app/src/main/res/xml/pref_legal.xml
+++ b/app/src/main/res/xml/pref_legal.xml
@@ -18,6 +18,11 @@
         app:iconSpaceReserved="false"/>
 
     <Preference
+        android:key="tos"
+        android:title="@string/tos"
+        app:iconSpaceReserved="false"/>
+
+    <Preference
         android:key="privacy_policy"
         android:title="@string/privacy_policy"
         app:iconSpaceReserved="false"/>
