Updates eclipse center to auto adjust for upcoming eclipses

--- a/app/src/main/res/values/integers.xml
+++ b/app/src/main/res/values/integers.xml
@@ -3,8 +3,10 @@
     <bool name="live_experience_enabled">false</bool>
 
     <!-- overlays a screen in the eclipse center notifying upcoming eclipse data -->
-    <bool name="lockout_eclipse_center">true</bool>
+    <bool name="lockout_eclipse_center">false</bool>
 
     <!-- allows user to see all audio and eclipse features content when eclipse data isn't available -->
     <bool name="show_all_content">true</bool>
+
+    <integer name="days_between_eclipse">7</integer>
 </resources>
