--- a/app/src/main/res/layout/fragment_eclipse_center.xml
+++ b/app/src/main/res/layout/fragment_eclipse_center.xml
@@ -1,4 +1,4 @@
-<androidx.coordinatorlayout.widget.CoordinatorLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/coordinator_layout"
@@ -6,42 +6,38 @@
     android:layout_height="match_parent"
     tools:context=".ui.center.EclipseCenterFragment">
 
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+    <include
+        android:id="@+id/eclipse_center_layout"
+        layout="@layout/layout_eclipse_center"
+        android:visibility="gone"/>
 
-        <include
-            android:id="@+id/eclipse_center_layout"
-            layout="@layout/layout_eclipse_center"/>
+    <include
+        android:id="@+id/simulation_view"
+        layout="@layout/layout_simulation_view"
+        android:visibility="gone"/>
 
-        <include
-            android:id="@+id/permission_view"
-            layout="@layout/layout_eclipse_center_permission"
-            android:visibility="gone"/>
+    <include
+        android:id="@+id/location_search_failed"
+        layout="@layout/view_location_search_failed"
+        android:visibility="gone"/>
 
-        <include
-            android:id="@+id/progress_view"
-            layout="@layout/layout_location_search"
-            android:visibility="gone"/>
+    <include
+        android:id="@+id/progress_view"
+        layout="@layout/layout_location_search"
+        android:visibility="gone"/>
 
-        <include
-            android:id="@+id/simulation_view"
-            layout="@layout/layout_simulation_view"
-            android:visibility="gone"/>
+    <include
+        android:id="@+id/permission_view"
+        layout="@layout/layout_eclipse_center_permission"
+        android:visibility="gone"/>
 
-        <include
-            android:id="@+id/lockout_view"
-            layout="@layout/view_eclipse_center_lockout"
-            android:visibility="gone"/>
+    <include
+        android:id="@+id/location_disabled_view"
+        layout="@layout/view_location_disabled"
+        android:visibility="gone"/>
 
-        <include
-            android:id="@+id/location_disabled_view"
-            layout="@layout/view_location_disabled"
-            android:visibility="gone"/>
-
-        <include
-            android:id="@+id/location_search_failed"
-            layout="@layout/view_location_search_failed"
-            android:visibility="gone"/>
-    </FrameLayout>
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+    <include
+        android:id="@+id/lockout_view"
+        layout="@layout/view_eclipse_center_lockout"
+        android:visibility="gone"/>
+</androidx.constraintlayout.widget.ConstraintLayout>
