--- a/app/src/main/res/layout/layout_simulation_view.xml
+++ b/app/src/main/res/layout/layout_simulation_view.xml
@@ -3,10 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_gravity="center"
+    android:layout_height="match_parent"
+    android:gravity="center"
     android:padding="@dimen/default_margin"
-    android:focusable="true">
+    android:focusable="true"
+    android:background="?android:colorBackground">
 
     <ImageView
         android:layout_width="150dp"
