--- a/app/src/main/res/layout/view_eclipse_center_lockout.xml
+++ b/app/src/main/res/layout/view_eclipse_center_lockout.xml
@@ -5,7 +5,8 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center"
-    android:padding="@dimen/default_margin">
+    android:padding="@dimen/default_margin"
+    android:background="?android:colorBackground">
 
     <ImageView
         android:layout_width="150dp"
