--- a/app/src/main/res/layout/view_location_search_failed.xml
+++ b/app/src/main/res/layout/view_location_search_failed.xml
@@ -4,7 +4,8 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center">
+    android:gravity="center"
+    android:background="?android:colorBackground">
 
     <ImageView
         android:layout_width="150dp"
