--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -18,4 +18,5 @@
     <dimen name="seekbar_size_half">8dp</dimen>
     <dimen name="seekbar_border_width">1dp</dimen>
 
+    <dimen name="countdown_time_size">40dp</dimen>
 </resources>
