Hides event section not relevant for current eclipse type

--- a/app/src/main/res/layout/view_countdown_section.xml
+++ b/app/src/main/res/layout/view_countdown_section.xml
@@ -30,7 +30,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/secondary_time"
         app:layout_constraintHorizontal_chainStyle="packed"
-        tools:text="0"/>
+        android:text="0"/>
 
     <TextView
         android:id="@+id/secondary_time"
@@ -46,6 +46,6 @@
         app:layout_constraintStart_toEndOf="@+id/primary_time"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_chainStyle="packed"
-        tools:text="0"/>
+        android:text="0"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
