Fixes photo credit hyperlinks

--- a/app/src/main/res/layout/item_photo_credit.xml
+++ b/app/src/main/res/layout/item_photo_credit.xml
@@ -6,6 +6,10 @@
         <variable
             name="photoCredit"
             type="org.eclipsesoundscapes.model.PhotoCredit" />
+
+        <variable
+            name="clickListener"
+            type="org.eclipsesoundscapes.ui.about.PhotoCreditAdapter.CreditsClickListener"/>
     </data>
 
    <androidx.cardview.widget.CardView
