--- a/app/src/main/res/layout/fragment_media.xml
+++ b/app/src/main/res/layout/fragment_media.xml
@@ -30,6 +30,7 @@
                 android:layout_weight="1"/>
 
             <TextView
+                android:visibility="gone"
                 android:id="@+id/more_content"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
