--- a/app/src/main/res/values/integers.xml
+++ b/app/src/main/res/values/integers.xml
@@ -1,12 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <bool name="live_experience_enabled">false</bool>
-
-    <!-- overlays a screen in the eclipse center notifying upcoming eclipse data -->
-    <bool name="lockout_eclipse_center">false</bool>
-
-    <!-- allows user to see all audio and eclipse features content when eclipse data isn't available -->
-    <bool name="show_all_content">true</bool>
-
     <integer name="days_between_eclipse">14</integer>
+    <integer name="first_contact_offset_sec">10</integer>
+    <integer name="mid_contact_offset_sec">30</integer>
 </resources>
