--- a/app/src/main/res/layout/activity_media_player.xml
+++ b/app/src/main/res/layout/activity_media_player.xml
@@ -130,7 +130,7 @@
             android:id="@+id/divider"
             android:layout_width="match_parent"
             android:layout_height="@dimen/divider_size"
-            android:background="?attr/colorControlNormal"
+            android:background="?attr/dividerVertical"
             android:layout_marginTop="@dimen/default_margin"/>
 
         <ScrollView
