--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -44,7 +44,7 @@
             <View
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/divider_size"
-                android:background="?attr/colorControlNormal"
+                android:background="?attr/dividerVertical"
                 android:layout_marginStart="16dp"
                 android:layout_marginEnd="16dp"/>
 
